# stat-guard

./: .coverage  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: basic_usage.py
stat_guard/: __init__.py  api.py  cli.py  engine.py  policy.py  report.py  violations.py
stat_guard.egg-info/: PKG-INFO  SOURCES.txt
stat_guard/checks/: __init__.py  base.py  cardinality.py  correlation.py  distribution.py  missing_data.py  outliers.py  sample_size.py  unit_integrity.py
stat_guard/profilers/: __init__.py  data_profiler.py  statistics.py
stat_guard/reporters/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py
tests/: __init__.py  test_checks.py  test_covariate_balance_smd.py  test_custom_validator.py  test_integration.py  test_policy.py  test_report_multiple_failures.py  test_report_structure.py  test_unit_integrity_missing_unit.py
